@@ -131,5 +131,8 @@
 * Redesign of Hantek::Control to make it easier to add support for new models
 * Removed buggy destructor from GlGenerator, proper cleanup still missing
 
-2011-11-16 Oliver Haag  <oliver.haag@gmail.com>
+2011-11-27 Oliver Haag  <oliver.haag@gmail.com>
 * Bugfix: Copy-paste in Hantek::Control::setOffset, thanks to tinosnitso
+
+2011-12-02 Oliver Haag  <oliver.haag@gmail.com>
+* Moved values needed to control gain into lists, initialized in connectDevice
